--- a/app/views/shrines/show.html.erb
+++ b/app/views/shrines/show.html.erb
@@ -18,7 +18,7 @@
         </div>
         <ul class="list-group">
           <li class="list-group-item">
-            <%= @shrine.introduction %>
+            <%= safe_join(@shrine.introduction.split("\n"),tag(:br)) %>
           </li>
           <li class="list-group-item">祭神:
             <% @shrine.gods.each do |god| %>
