--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -28,7 +28,7 @@
               <h5 class="border-bottom"><%= other_post.shrine.name %></h5>
               <%= other_post.body.truncate(70) %>
               <div class="d-flex">
-                <% other_post.post_images.each do |post_image| %>
+                <% other_post.post_images.first(3).each do |post_image| %>
                   <%= attachment_image_tag post_image, :image, style:"width: 31%; margin: 0 1%;" %>
                 <% end %>
               </div>
