--- a/app/views/shrines/index.html.erb
+++ b/app/views/shrines/index.html.erb
@@ -40,7 +40,7 @@
           </ul>
         </div>
       <% end %>
-      <div class="d-flex justify-content-center"><%= paginate @shrines %></div>
+      <div class="d-flex justify-content-center"><%= paginate @shrines, window: 2 %></div>
     </div>
 
     <div class="col-lg-5">
