--- a/app/views/shrines/show.html.erb
+++ b/app/views/shrines/show.html.erb
@@ -38,11 +38,11 @@
       <table class="table table-bordered bg-light shadow">
         <tbody>
           <tr>
-            <th class="col-2">住所</th>
+            <th class="col-2" scope="row">住所</th>
             <td><%= @shrine.address %></td>
           </tr>
           <tr>
-            <th class="col-2">近くの神社</th>
+            <th class="col-2" scope="row">近くの神社</th>
             <td>
               <% unless @near_shrine.blank? %> <!--近くの神社の配列が存在するか判断-->
                 <ul class="list-unstyled m-0">
