--- a/app/views/shrines/show.html.erb
+++ b/app/views/shrines/show.html.erb
@@ -18,7 +18,7 @@
         </div>
         <ul class="list-group">
           <li class="list-group-item">
-            <%= safe_join(@shrine.introduction.split("\n"),tag(:br)) %>
+            <%= safe_join(@shrine.introduction.split("\n"),tag(:br)) %> <!--入力された通りに表示する-->
           </li>
           <li class="list-group-item">祭神:
             <% @shrine.gods.each do |god| %>
@@ -32,7 +32,7 @@
           </li>
         </ul>
       </div>
-      <div id="map" style="width: 100%; height: 350px;"> <!--Google Mapを表示する-->
+      <div id="map" class="google_map"> <!--Google Mapを表示する-->
         <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=<%= ENV['API_KEY'] %>&callback=initMap" async defer></script>
       </div>
       <div class="table-responsive">
@@ -82,7 +82,7 @@
               <small class="text-muted pt-2">参拝日:<%= post.visit_date.strftime("%Y年%m月%d日") %></small>
             </div>
             <%= link_to shrine_post_path(post.shrine, post), {class:"text-reset"} do %>
-              <div class="col-12 p-0 d-flex flex-wrap">
+              <div class="p-0 d-flex flex-wrap">
                 <% post.post_images.first(3).each do |post_image| %>
                   <%= attachment_image_tag post_image, :image, style:"width: 31%; margin: 0 1%;" %>
                 <% end %>
