--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,20 +1,20 @@
-<div class="container mb-1 py-3" style="height: 600px;">
+<div class="container mb-1 py-3">
   <div class="row">
     <% breadcrumb :user_edit, @user %>
     <div class="col-lg-10 mx-auto">
-      <h3>ユーザ編集画面</h3>
+      <h3 class="ml-3">ユーザ編集画面</h3>
       <%= form_with model: @user, local: true do |f| %>
       <%= render "layouts/error_messages", model: f.object %>
         <div class="form-row mt-4">
-          <%= f.label :"名前",class:"col-2 pl-4" %>
+          <%= f.label :name, "名前",class:"col-2 pl-4" %>
           <%= f.text_field :name, class:"col-5 p-1" %>
         </div>
         <div class="form-row my-3">
-          <%= f.label :"紹介文", class:"col-2 pl-4" %>
+          <%= f.label :introduction, "紹介文", class:"col-2 pl-4" %>
           <%= f.text_area :introduction, rows:3, class:"col-5 p-1" %>
         </div>
         <div class="from-row">
-          <%= f.label :"ユーザ画像", class:"col-2" %>
+          <%= f.label :profile_image, "ユーザ画像", class:"col-2" %>
           <%= f.attachment_field :profile_image %>
         </div>
         <div class="d-flex offset-2 mt-4">
