--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,13 +13,15 @@
             <% if user_signed_in? %>
               <li><%= link_to "マイページ", user_path(current_user), class:"nav-link text-white font-weight-bold mr-1" %></li>
               <li><%= link_to "参拝作法", manner_path, class:"nav-link text-white font-weight-bold mr-1" %></li>
-              <li class="nav-link mr-1 dropdown drop-hover"><a class="dropdown-toggle text-white font-weight-bold" data-toggle="dropdown">神社</a>
+              <li class="nav-link mr-1 dropdown drop-hover">
+                <a class="dropdown-toggle text-white font-weight-bold" data-toggle="dropdown">神社</a>
                 <%= render "layouts/header_shrine" %>
               </li>
               <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class:"nav-link text-white font-weight-bold mr-1" %></li>
             <% else %>
               <li><%= link_to "参拝作法", manner_path, class:"nav-link text-white font-weight-bold mr-1" %></li>
-              <li class="nav-link mr-1 dropdown drop-hover"><a class="dropdown-toggle text-white font-weight-bold" data-toggle="dropdown">神社</a>
+              <li class="nav-link mr-1 dropdown drop-hover">
+                <a class="dropdown-toggle text-white font-weight-bold" data-toggle="dropdown">神社</a>
                 <%= render "layouts/header_shrine" %>
               </li>
               <li><%= link_to "新規登録", new_user_registration_path, class:"nav-link text-white font-weight-bold mr-1" %></li>
