--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -61,19 +61,19 @@ h2, h3{
 }
 // kaminariのデザイン変更
 .pagination{
-    li a {
-      color: #696969;
-      margin: 0 5px;
-      border-radius: 0.25rem;
-    }
-    li a:hover{
-        background: #93c9ff;
-      }
-    .active .page-link {
-      background: #adb5bd;
-      border: gray;
-      color: #000;
-    }
+  li a {
+    color: #696969;
+    margin: 0 5px;
+    border-radius: 0.25rem;
+  }
+  li a:hover{
+    background: #93c9ff;
+  }
+  .active .page-link {
+    background: #adb5bd;
+    border: gray;
+    color: #000;
+  }
 }
 
 main{
@@ -86,7 +86,7 @@ main{
   margin-top: auto;
   background-color: #565656;
 }
-
+// レスポンシブ対応
 @media screen and (max-width:992px) {
   // レスポンシブ対応時ヘッダーを見やすいように大きくする
   header{
@@ -94,21 +94,21 @@ main{
   }
 
   .navbar img{
-  height: 100px;
-  width: 200px;
+    height: 100px;
+    width: 200px;
   }
   // ハンバーガーメニュー
   .navbar-toggler{
-  width: 95px;
-  height: 95px;
-  position: relative;
+    width: 95px;
+    height: 95px;
+    position: relative;
     span{
-    position: absolute;
-    left: 9px;
-    width: 80%;
-    height: 6px;
-    background-color: #ffffff;
-    border-radius: 6px;
+      position: absolute;
+      left: 9px;
+      width: 80%;
+      height: 6px;
+      background-color: #ffffff;
+      border-radius: 6px;
     }
     span:nth-child(1){
       top: 20px;
