--- a/app/views/shrines/index.html.erb
+++ b/app/views/shrines/index.html.erb
@@ -48,14 +48,14 @@
       <% @posts.each do |post| %>
         <div class="card shadow p-2 mb-2">
           <div class="card-header mb-1 d-flex justify-content-between">
-            <%= link_to  user_path(post.user) do %>
+            <%= link_to user_path(post.user) do %>
               <%= attachment_image_tag post.user, :profile_image, :fill,35,35, class:"rounded-circle" %>
               <%= post.user.name %>
             <% end %>
             <small class="text-muted pt-2">参拝日:<%= post.visit_date.strftime("%Y年%m月%d日") %></small>
           </div>
           <%= link_to shrine_post_path(post.shrine, post), {class:"text-reset"} do %>
-            <div class="col-12 p-0 d-flex flex-wrap">
+            <div class="p-0 d-flex flex-wrap">
               <% post.post_images.first(3).each do |post_image| %>
                 <%= attachment_image_tag post_image, :image, style:"width: 31%; margin: 0 1%;" %>
               <% end %>
@@ -65,7 +65,7 @@
         </div>
       <% end %>
       <h2>おすすめタグ<small>(10件)</small></h2>
-      <div class="d-flex flex-wrap border rounded  bg-light shadow p-2">
+      <div class="d-flex flex-wrap border rounded bg-light shadow p-2">
         <% @tags.each do |tag| %>
           <%= link_to tag.tag_name + "(#{tag.shrine.count})", search_path(content: tag.tag_name, model: 'tag'), class:"tag text-reset mx-2" %>
         <% end %>
