--- a/app/views/users/caution.html.erb
+++ b/app/views/users/caution.html.erb
@@ -8,8 +8,8 @@
       退会する場合は、「退会する」をクリックしてください。
     </p>
     <div class="d-flex justify-content-center">
-      <%= link_to '退会しない', user_path(current_user), class:"btn btn-sm btn-primary mx-2" %>
-      <%= link_to '退会する', users_hide_path(current_user), method: :put, data: {confirm: "本当に退会しますか？"}, class:"btn btn-sm btn-danger mx-3" %>
+      <%= link_to "退会しない", user_path(current_user), class:"btn btn-sm btn-primary mx-2" %>
+      <%= link_to "退会する", users_hide_path(current_user), method: :put, data: {confirm: "本当に退会しますか？"}, class:"btn btn-sm btn-danger mx-3" %>
     </div>
   </div>
 </div>
