--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,7 @@
       <div class="d-flex">
         <h5 class="m-0 mt-1">登録情報</h5>
         <% if @user == current_user %>
-          <%= link_to '編集', edit_user_path(@user), class:"btn btn-sm btn-outline-success ml-3 " %>
+          <%= link_to "編集", edit_user_path(@user), class:"btn btn-sm btn-outline-success ml-3" %>
         <% else %>
           <h5 id="follow" class="ml-3 mb-0"><%= render "users/follow", user: @user %></h5>
         <% end %>
