--- a/app/views/layouts/_header_shrine.html.erb
+++ b/app/views/layouts/_header_shrine.html.erb
@@ -1,85 +1,85 @@
 <ul class="dropdown-menu">
   <li><%= link_to "一覧", shrines_path, class:"dropdown-item" %></li>
   <li class="dropright drop-hover">
-  <%= link_to "北海道・東北地方", search_path(content: "北海道 青森 岩手 宮城 秋田 山形 福島", model: "tag"), class:"dropdown-item dropdown-toggle" %>
+  <%= link_to "北海道・東北地方", search_path(content: "北海道 青森 岩手 宮城 秋田 山形 福島", method: "multi"), class:"dropdown-item dropdown-toggle" %>
     <ul class="dropdown-menu">
-      <li><%= link_to "北海道", search_path(content: '北海道', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "青森県", search_path(content: '青森', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "岩手県", search_path(content: '岩手', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "宮城県", search_path(content: '宮城', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "秋田県", search_path(content: '秋田', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "山形県", search_path(content: '山形', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "福島県", search_path(content: '福島', model: 'tag'), class:"dropdown-item" %></li>
+      <li><%= link_to "北海道", search_path(content: '北海道', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "青森県", search_path(content: '青森', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "岩手県", search_path(content: '岩手', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "宮城県", search_path(content: '宮城', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "秋田県", search_path(content: '秋田', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "山形県", search_path(content: '山形', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "福島県", search_path(content: '福島', method: 'multi'), class:"dropdown-item" %></li>
     </ul>
   </li>
   <li class="dropright drop-hover">
-  <%= link_to "関東地方", search_path(content: "茨城 栃木 群馬 埼玉 千葉 東京 神奈川", model: "tag"), class:"dropdown-item dropdown-toggle" %>
+  <%= link_to "関東地方", search_path(content: "茨城 栃木 群馬 埼玉 千葉 東京 神奈川", method: "multi"), class:"dropdown-item dropdown-toggle" %>
     <ul class="dropdown-menu">
-      <li><%= link_to "茨城県", search_path(content: '茨城', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "栃木県", search_path(content: '栃木', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "群馬県", search_path(content: '群馬', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "埼玉県", search_path(content: '埼玉', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "千葉県", search_path(content: '千葉', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "東京都", search_path(content: '東京', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "神奈川県", search_path(content: '神奈川', model: 'tag'), class:"dropdown-item" %></li>
+      <li><%= link_to "茨城県", search_path(content: '茨城', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "栃木県", search_path(content: '栃木', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "群馬県", search_path(content: '群馬', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "埼玉県", search_path(content: '埼玉', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "千葉県", search_path(content: '千葉', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "東京都", search_path(content: '東京', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "神奈川県", search_path(content: '神奈川', method: 'multi'), class:"dropdown-item" %></li>
     </ul>
   </li>
   <li class="dropright drop-hover">
-  <%= link_to "中部地方", search_path(content: "新潟 富山 石川 福井 山梨 長野 岐阜 静岡 愛知", model: "tag"), class:"dropdown-item dropdown-toggle" %>
+  <%= link_to "中部地方", search_path(content: "新潟 富山 石川 福井 山梨 長野 岐阜 静岡 愛知", method: "multi"), class:"dropdown-item dropdown-toggle" %>
     <ul class="dropdown-menu">
-      <li><%= link_to "新潟県", search_path(content: '新潟', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "富山県", search_path(content: '富山', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "石川県", search_path(content: '石川', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "福井県", search_path(content: '福井', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "山梨県", search_path(content: '山梨', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "長野県", search_path(content: '長野', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "岐阜県", search_path(content: '岐阜', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "静岡県", search_path(content: '静岡', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "愛知県", search_path(content: '愛知', model: 'tag'), class:"dropdown-item" %></li>
+      <li><%= link_to "新潟県", search_path(content: '新潟', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "富山県", search_path(content: '富山', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "石川県", search_path(content: '石川', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "福井県", search_path(content: '福井', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "山梨県", search_path(content: '山梨', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "長野県", search_path(content: '長野', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "岐阜県", search_path(content: '岐阜', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "静岡県", search_path(content: '静岡', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "愛知県", search_path(content: '愛知', method: 'multi'), class:"dropdown-item" %></li>
     </ul>
   </li>
   <li class="dropright drop-hover">
-  <%= link_to "近畿地方", search_path(content: "三重 滋賀 京都 大阪 兵庫 奈良 和歌山", model: "tag"), class:"dropdown-item dropdown-toggle" %>
+  <%= link_to "近畿地方", search_path(content: "三重 滋賀 京都 大阪 兵庫 奈良 和歌山", method: "multi"), class:"dropdown-item dropdown-toggle" %>
     <ul class="dropdown-menu">
-      <li><%= link_to "三重県", search_path(content: '三重', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "滋賀県", search_path(content: '滋賀', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "京都府", search_path(content: '京都', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "大阪府", search_path(content: '大阪', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "兵庫県", search_path(content: '兵庫', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "奈良県", search_path(content: '奈良', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "和歌山県", search_path(content: '和歌山', model: 'tag'), class:"dropdown-item" %></li>
+      <li><%= link_to "三重県", search_path(content: '三重', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "滋賀県", search_path(content: '滋賀', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "京都府", search_path(content: '京都', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "大阪府", search_path(content: '大阪', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "兵庫県", search_path(content: '兵庫', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "奈良県", search_path(content: '奈良', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "和歌山県", search_path(content: '和歌山', method: 'multi'), class:"dropdown-item" %></li>
     </ul>
   </li>
   <li class="dropright drop-hover">
-  <%= link_to "中国地方", search_path(content: "鳥取 島根 岡山 広島 山口", model: "tag"), class:"dropdown-item dropdown-toggle" %>
+  <%= link_to "中国地方", search_path(content: "鳥取 島根 岡山 広島 山口", method: "multi"), class:"dropdown-item dropdown-toggle" %>
     <ul class="dropdown-menu">
-      <li><%= link_to "鳥取県", search_path(content: '鳥取', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "島根県", search_path(content: '島根', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "岡山県", search_path(content: '岡山', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "広島県", search_path(content: '広島', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "山口県", search_path(content: '山口', model: 'tag'), class:"dropdown-item" %></li>
+      <li><%= link_to "鳥取県", search_path(content: '鳥取', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "島根県", search_path(content: '島根', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "岡山県", search_path(content: '岡山', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "広島県", search_path(content: '広島', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "山口県", search_path(content: '山口', method: 'multi'), class:"dropdown-item" %></li>
     </ul>
   </li>
   <li class="dropright drop-hover">
-  <%= link_to "四国地方", search_path(content: "徳島 香川 愛媛 高知", model: "tag"), class:"dropdown-item dropdown-toggle" %>
+  <%= link_to "四国地方", search_path(content: "徳島 香川 愛媛 高知", method: "multi"), class:"dropdown-item dropdown-toggle" %>
     <ul class="dropdown-menu">
-      <li><%= link_to "徳島県", search_path(content: '徳島', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "香川県", search_path(content: '香川', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "愛媛県", search_path(content: '愛媛', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "高知県", search_path(content: '高知', model: 'tag'), class:"dropdown-item" %></li>
+      <li><%= link_to "徳島県", search_path(content: '徳島', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "香川県", search_path(content: '香川', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "愛媛県", search_path(content: '愛媛', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "高知県", search_path(content: '高知', method: 'multi'), class:"dropdown-item" %></li>
     </ul>
   </li>
   <li class="dropright drop-hover">
-  <%= link_to "九州・沖縄地方", search_path(content: "福岡 佐賀 長崎 熊本 大分 宮崎 鹿児島 沖縄", model: "tag"), class:"dropdown-item dropdown-toggle" %>
+  <%= link_to "九州・沖縄地方", search_path(content: "福岡 佐賀 長崎 熊本 大分 宮崎 鹿児島 沖縄", method: "multi"), class:"dropdown-item dropdown-toggle" %>
     <ul class="dropdown-menu">
-      <li><%= link_to "福岡県", search_path(content: '福岡', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "佐賀県", search_path(content: '佐賀', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "長崎県", search_path(content: '長崎', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "熊本県", search_path(content: '熊本', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "大分県", search_path(content: '大分', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "宮崎県", search_path(content: '宮崎', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "鹿児島県", search_path(content: '鹿児島', model: 'tag'), class:"dropdown-item" %></li>
-      <li><%= link_to "沖縄県", search_path(content: '沖縄', model: 'tag'), class:"dropdown-item" %></li>
+      <li><%= link_to "福岡県", search_path(content: '福岡', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "佐賀県", search_path(content: '佐賀', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "長崎県", search_path(content: '長崎', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "熊本県", search_path(content: '熊本', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "大分県", search_path(content: '大分', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "宮崎県", search_path(content: '宮崎', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "鹿児島県", search_path(content: '鹿児島', method: 'multi'), class:"dropdown-item" %></li>
+      <li><%= link_to "沖縄県", search_path(content: '沖縄', method: 'multi'), class:"dropdown-item" %></li>
     </ul>
   </li>
 </ul>
