--- a/app/views/shrines/index.html.erb
+++ b/app/views/shrines/index.html.erb
@@ -29,12 +29,12 @@
             </li>
             <li class="list-group-item">祭神:
               <% shrine.gods.each do |god| %>
-                <%= link_to god.god_name, search_path(content: god.god_name, model: 'god'), class:"text-reset ml-0" %>
+                <%= link_to god.god_name, search_path(content: god.god_name, method: 'multi'), class:"text-reset ml-0" %>
               <% end %>
             </li>
             <li class="list-group-item">
               <% shrine.tags.each do |tag| %>
-                <%= link_to tag.tag_name + "(#{tag.shrine.count})", search_path(content: tag.tag_name, model: 'tag'), class:"tag text-reset ml-0" %>
+                <%= link_to tag.tag_name + "(#{tag.shrine.count})", search_path(content: tag.tag_name, method: 'multi'), class:"tag text-reset ml-0" %>
               <% end %>
             </li>
           </ul>
@@ -67,7 +67,7 @@
       <h2>おすすめタグ<small>(10件)</small></h2>
       <div class="d-flex flex-wrap border rounded bg-light shadow p-2">
         <% @tags.each do |tag| %>
-          <%= link_to tag.tag_name + "(#{tag.shrine.count})", search_path(content: tag.tag_name, model: 'tag'), class:"tag text-reset mx-2" %>
+          <%= link_to tag.tag_name + "(#{tag.shrine.count})", search_path(content: tag.tag_name, method: 'multi'), class:"tag text-reset mx-2" %>
         <% end %>
       </div>
     </div>
