--- a/app/assets/stylesheets/shrines.scss
+++ b/app/assets/stylesheets/shrines.scss
@@ -6,3 +6,24 @@
   width: 100%;
   height: 400px;
 }
+
+.shrine_index_images{
+  width: 48%;
+  height: auto;
+  margin: 1%;
+}
+
+.shrine_post_images{
+  width: 31%;
+  margin: 0 1%;
+}
+
+.w-20{
+  width: 20%;
+}
+
+.admin_shrine_images{
+  width: 100%;
+  height: auto;
+  max-height: 230px;
+}
