--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -29,7 +29,7 @@
               <%= other_post.body.truncate(70) %>
               <div class="d-flex">
                 <% other_post.post_images.first(3).each do |post_image| %>
-                  <%= attachment_image_tag post_image, :image, style:"width: 31%; margin: 0 1%;" %>
+                  <%= attachment_image_tag post_image, :image, class:"shrine_post_images" %>
                 <% end %>
               </div>
             </div>
