--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -62,9 +62,9 @@
               <small class="text-muted pt-2">参拝日:<%= post.visit_date.strftime("%Y年%m月%d日") %></small>
             </div>
             <%= link_to shrine_post_path(post.shrine, post), {class:"text-reset"} do %>
-              <div class="col-12 p-0 d-flex flex-wrap">
+              <div class="p-0 d-flex flex-wrap">
                 <% post.post_images.first(3).each do |post_image| %>
-                  <%= attachment_image_tag post_image, :image, style:"width: 31%; margin: 0 1%;" %>
+                  <%= attachment_image_tag post_image, :image, class:"shrine_post_images" %>
                 <% end %>
               </div>
               <%= post.body.truncate(50) %>
