--- a/app/views/users/caution.html.erb
+++ b/app/views/users/caution.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <% breadcrumb :user_caution %>
-  <div class="d-flex flex-column align-items-center justify-content-center mb-1" style="height: 600px;">
+  <div class="d-flex flex-column align-items-center justify-content-center vh-100">
     <h4 class="text-center font-weight-bold mb-3">本当に退会しますか？</h4>
     <p class="text-center">
       退会すると、会員登録情報や<br />
