--- a/app/views/shrines/index.html.erb
+++ b/app/views/shrines/index.html.erb
@@ -15,7 +15,7 @@
           <%= link_to shrine_path(shrine), {class:"text-reset"} do %>
             <div class="d-flex">
               <% shrine.shrine_images.first(2).each do |image| %>
-                <%= attachment_image_tag image, :image, style:"width: 48%; height: auto; margin: 1%;" %>
+                <%= attachment_image_tag image, :image, class:"shrine_index_images" %>
               <% end %>
             </div>
             <div class="card-body p-2 pl-4">
@@ -57,7 +57,7 @@
           <%= link_to shrine_post_path(post.shrine, post), {class:"text-reset"} do %>
             <div class="p-0 d-flex flex-wrap">
               <% post.post_images.first(3).each do |post_image| %>
-                <%= attachment_image_tag post_image, :image, style:"width: 31%; margin: 0 1%;" %>
+                <%= attachment_image_tag post_image, :image, class:"shrine_post_images" %>
               <% end %>
             </div>
             <%= post.body.truncate(50) %>
