--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -36,7 +36,7 @@
       </div>
     </div>
   </div>
-  <div class="row mt-5">
+  <div class="mt-5">
       <h3><%= @user.name %>さんの投稿一覧<small><%= "(#{@posts.count}件)" %></small></h3>
       <% if @posts.exists? %>
       <div class="d-flex flex-wrap">
