current_location_update

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,6 +17,7 @@
                 <a class="dropdown-toggle text-white font-weight-bold" data-toggle="dropdown">神社</a>
                 <%= render "layouts/header_shrine" %>
               </li>
+              <li><%= link_to "現在地周辺", location_path, class:"nav-link text-white font-weight-bold mr-1" %></li>
               <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class:"nav-link text-white font-weight-bold mr-1" %></li>
             <% else %>
               <li><%= link_to "参拝作法", manner_path, class:"nav-link text-white font-weight-bold mr-1" %></li>
