--- a/app/views/shrines/location.html.erb
+++ b/app/views/shrines/location.html.erb
@@ -1,4 +1,6 @@
 <div class="container py-5">
+  <% breadcrumb :location %>
+  <p class="text-center">ボタンを押すと現在地から半径50km以内の神社を検索できます。</p>
   <div class="d-flex justify-content-center">
     <button class="location btn btn-success">現在地から検索</button>
   </div>
@@ -42,4 +44,5 @@
       <p class="mx-auto mt-5">近くの神社がありません</p>
     <% end %>
   </div>
+   <div class="d-flex justify-content-center"><%= paginate @location_shrine %></div>
 </div>
