--- a/app/views/shrines/location.html.erb
+++ b/app/views/shrines/location.html.erb
@@ -2,7 +2,7 @@
   <% breadcrumb :location %>
   <p class="text-center">ボタンを押すと現在地から半径50km以内の神社を検索できます。</p>
   <div class="d-flex justify-content-center">
-    <button class="location btn btn-success">現在地から検索</button>
+    <button class="location btn btn-success">現在地周辺を検索</button>
   </div>
   <div class="row">
     <% unless @location_shrine.blank? %> <!--近くの神社の配列が存在するか判断-->
@@ -44,5 +44,5 @@
       <p class="mx-auto mt-5">近くの神社がありません</p>
     <% end %>
   </div>
-   <div class="d-flex justify-content-center"><%= paginate @location_shrine %></div>
+  <div class="d-flex justify-content-center"><%= paginate @location_shrine %></div>
 </div>
