top_location_path_add

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -34,6 +34,7 @@
   </div>
   <div class="d-flex flex-column align-items-center m-auto w-25">
     <h2><span class="underline-dark">見つける</span></h2>
-    <p class="mt-2">地域・祭神・御利益であなたがお参りしたい神社を見つけることができます。検索フォームでは複数ワードでの検索ができます。</p>
+    <p class="mt-2">地域・祭神・御利益であなたがお参りしたい神社を見つけることができます。検索フォームでは複数ワードでの検索ができます。また現在地からも検索できます。</p>
+    <p><%= link_to "現在地から検索 >", location_path, class:"btn btn-outline-success rounded-pill" %></p>
   </div>
 </div>
